// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTraceString creates a real trace 1`] = `
Array [
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x0",
    "name": "init꞉config",
    "ph": "b",
    "pid": 0,
    "tid": 0,
    "ts": 650000,
  },
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x0",
    "name": "init꞉config",
    "ph": "e",
    "pid": 0,
    "tid": 0,
    "ts": 860000,
  },
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x1",
    "name": "runner꞉run",
    "ph": "b",
    "pid": 0,
    "tid": 0,
    "ts": 870000,
  },
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x1",
    "name": "runner꞉run",
    "ph": "e",
    "pid": 0,
    "tid": 0,
    "ts": 990000,
  },
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x2",
    "name": "runner꞉auditing",
    "ph": "b",
    "pid": 0,
    "tid": 0,
    "ts": 990000,
  },
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x2",
    "name": "runner꞉auditing",
    "ph": "e",
    "pid": 0,
    "tid": 0,
    "ts": 1740000,
  },
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x3",
    "name": "audit꞉is-on-https",
    "ph": "b",
    "pid": 0,
    "tid": 0,
    "ts": 1010000,
  },
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x3",
    "name": "audit꞉is-on-https",
    "ph": "e",
    "pid": 0,
    "tid": 0,
    "ts": 1020000,
  },
  Object {
    "args": Object {
      "data": Object {
        "frameTreeNodeId": 1,
        "frames": Array [],
        "persistentIds": true,
      },
    },
    "cat": "disabled-by-default-devtools.timeline",
    "dur": 0,
    "name": "TracingStartedInBrowser",
    "ph": "I",
    "pid": 0,
    "tid": 0,
    "ts": 0,
  },
]
`;

exports[`generateTraceEvents generates a pair of trace events 1`] = `
Array [
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x0",
    "name": "init꞉config",
    "ph": "b",
    "pid": 0,
    "tid": 0,
    "ts": 650000,
  },
  Object {
    "args": Object {},
    "cat": "blink.user_timing",
    "dur": 0,
    "id": "0x0",
    "name": "init꞉config",
    "ph": "e",
    "pid": 0,
    "tid": 0,
    "ts": 860000,
  },
]
`;
